public class Paper extends Shapes{
    private final boolean beatsRock = true;
    private final boolean beatsScissors = false;

    public boolean isBeatsRock() {
        return beatsRock;
    }
    public boolean isBeatsScissors() {
        return beatsScissors;
    }
}
