public class Rock extends Shapes{
    private final boolean beatsPaper = false;
    private final boolean beatsScissors = true;
    
    public boolean isBeatsPaper() {
        return beatsPaper;
    }
    public boolean isBeatsScissors() {
        return beatsScissors;
    }
}
