package rockscissorspaper.shapes;

public abstract class Shape {

    protected boolean isShapeSelected;

    public abstract boolean selectedShape();

    public abstract String toString();
}
